<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('users', function (Blueprint $table) {
            $table->id();
            $table->string('name');
            $table->string('email')->unique();
            $table->timestamp('email_verified_at')->nullable();
            $table->string('password');

            // Role & Status
            $table->string('role')->default('client'); // superadmin, vendor, client, staff
            $table->string('status')->default('pending'); // pending, approved, rejected
            $table->boolean('is_super_admin')->default(false);
            $table->boolean('is_verified')->default(false); // badge boutique vérifiée

            // Vendor Store Info
            $table->string('store_slug')->nullable()->unique();
            $table->string('shop_name')->nullable();
            $table->text('store_description')->nullable();
            $table->string('project_type')->nullable(); // artisan, vetements, digital, electronique

            // Contact & Location
            $table->string('phone')->nullable();
            $table->string('city')->nullable();
            $table->decimal('lat', 10, 8)->nullable();
            $table->decimal('lng', 11, 8)->nullable();

            // Store Branding
            $table->string('logo_url')->nullable();
            $table->string('banner_url')->nullable();
            $table->json('theme_settings')->nullable(); // { primaryColor, fontFamily, ... }

            // Loyalty & Financials
            $table->integer('loyalty_points')->default(0); // points fidélité client
            $table->text('bio')->nullable(); // storytelling artisan

            $table->rememberToken();
            $table->timestamps();
        });

        Schema::create('password_reset_tokens', function (Blueprint $table) {
            $table->string('email')->primary();
            $table->string('token');
            $table->timestamp('created_at')->nullable();
        });

        Schema::create('sessions', function (Blueprint $table) {
            $table->string('id')->primary();
            $table->foreignId('user_id')->nullable()->index();
            $table->string('ip_address', 45)->nullable();
            $table->text('user_agent')->nullable();
            $table->longText('payload');
            $table->integer('last_activity')->index();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('sessions');
        Schema::dropIfExists('password_reset_tokens');
        Schema::dropIfExists('users');
    }
};
